Add final functions

--- a/style.css
+++ b/style.css
@@ -118,6 +118,7 @@ h1 {
     padding: 15px 20px;
     position: absolute;
     bottom: -50px;
+    transition: transform 0.4s ease-in-out;
 }
 
 .notification-container p {
